--- a/css/leon.css
+++ b/css/leon.css
@@ -296,3 +296,38 @@ body {
 .services .services-content .col .image img {
   width: 240px;
 }
+
+/* End Services */
+
+/* Start Portfolio */
+
+.portfolio {
+  padding: 60px 0;
+  background-color: #f6f6f6;
+}
+
+.portfolio .portfolio-content {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 30px;
+  margin-top: 100px;
+}
+
+.portfolio .portfolio-content .col .srv img {
+  max-width: 100%;
+}
+
+.portfolio .portfolio-content .col .srv .text {
+  background-color: #ffffff;
+  padding: 15px;
+}
+
+.portfolio .portfolio-content .col .srv h3 {
+  margin: 0;
+}
+
+.portfolio .portfolio-content .col .srv p {
+  color: #444;
+  line-height: 1.6;
+  font-weight: 300;
+}
