--- a/css/leon.css
+++ b/css/leon.css
@@ -8,6 +8,7 @@
 :root {
   --main-color: #45cab7;
   --secondary-color: #2c4755;
+  --section-padding: 60px;
 }
 
 body {
@@ -61,11 +62,9 @@ body {
     font-size: 15px;
   }
 }
-
 /* End Global Rules */
 
 /* Start Header */
-
 .header {
   padding: 20px;
 }
@@ -158,11 +157,9 @@ body {
 .header .container .links ul li:hover a {
   padding-left: 25px;
 }
-
 /* End Header */
 
 /* Start Landing */
-
 .landing {
   background-image: url("../images/landing.jpg");
   background-size: cover;
@@ -189,11 +186,9 @@ body {
   line-height: 1.8;
   font-size: 19px;
 }
-
 /* End Landing */
 
 /* Start Features */
-
 .features {
   padding: 60px 0;
   background-color: #f6f6f6;
@@ -224,11 +219,9 @@ body {
   color: #777;
   font-size: 17px;
 }
-
 /* End Features */
 
 /* Start Services */
-
 .services {
   padding: 60px 0;
 }
@@ -296,11 +289,9 @@ body {
 .services .services-content .col .image img {
   width: 240px;
 }
-
 /* End Services */
 
 /* Start Portfolio */
-
 .portfolio {
   padding: 60px 0;
   background-color: #f6f6f6;
@@ -330,4 +321,94 @@ body {
   color: #444;
   line-height: 1.6;
   font-weight: 300;
+}
+/* End Portfolio */
+
+/* Start About */
+.about {
+  padding-top: var(--section-padding);
+  padding-bottom: calc(var(--section-padding) + 60px);
+}
+
+.about .about-content {
+  margin-top: 100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+@media (max-width: 990px) {
+  .about .about-content {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
+.about .about-content .image {
+  width: 250px;
+  height: 375px;
+  position: relative;
+}
+
+@media (max-width: 990px) {
+  .about .about-content .image {
+    margin: 0 auto 50px;
+  }
+}
+
+.about .about-content .image::before {
+  content: "";
+  position: absolute;
+  top: -40px;
+  left: -26px;
+  height: 120%;
+  width: 100px;
+  background-color: #EBECED;
+  z-index: -1;
+}
+
+.about .about-content .image::after {
+  content: "";
+  position: absolute;
+  width: 120px;
+  height: 300px;
+  border-left: 80px solid var(--main-color);
+  border-bottom: 80px solid var(--main-color);
+  top: -40px;
+  right: -150px;
+  z-index: -1;
+}
+
+.about .about-content .image img {
+  max-width: 100%;
+}
+
+@media (max-width: 990px) {
+  .about .about-content .image::before,
+  .about .about-content .image::after {
+    display: none;
+  }
+}
+
+.about .about-content .text {
+  flex-basis: 47%;
+}
+
+.about .about-content .text p:first-of-type {
+  font-weight: bold;
+  line-height: 2;
+  margin-bottom: 50px;
+}
+
+.about .about-content .text hr {
+  display: inline-block;
+  width: 50%;
+  border-color: var(--main-color);
+}
+
+.about .about-content .text p:last-of-type {
+  font-weight: normal;
+  line-height: 2;
+  margin-top: 50px;
+  color: #777;
 }
