--- a/css/leon.css
+++ b/css/leon.css
@@ -412,3 +412,66 @@ body {
   margin-top: 50px;
   color: #777;
 }
+/* End About */
+
+/* Start Contact */
+.contact {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-color: #f6f6f6;
+}
+
+.contact .info {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  text-align: center;
+}
+
+.contact .info .label {
+  font-weight: 800;
+  font-size: 35px;
+  color: var(--secondary-color);
+  margin-bottom: 15px;
+  letter-spacing: -2px;
+}
+
+.contact .info .link {
+  text-decoration: none;
+  color: var(--main-color);
+  font-weight: 800;
+  font-size: 35px;
+}
+
+.contact .info .social {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.contact .info .social i {
+  margin-left: 10px;
+  color: #2C4755;
+}
+
+@media (max-width: 767px) {
+  .contact .info .label,
+  .contact .info .link {
+    font-size: 24px;
+  }
+}
+/* End Contact */
+
+/* Start Footer */
+.footer{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: var(--secondary-color);
+  color: white;
+  text-align: center;
+  font-size: 18px;
+}
+
+.footer span {
+  color: var(--main-color);
+  font-weight: bold;
+}
